Update config defaults, including default enabling strategy worker

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ Game/Content/Spatial/SchemaDatabase.uasset
 # Rider
 .idea/
 Game/Plugins/Developer/RiderLink
+
+spatial/workers/unreal/spatialos.RoutingWorker.worker.json
