--- a/Game/Config/DefaultSpatialGDKEditorSettings.ini
+++ b/Game/Config/DefaultSpatialGDKEditorSettings.ini
@@ -1,8 +1,55 @@
 
 
 [/Script/SpatialGDKEditor.SpatialGDKEditorSettings]
-LaunchConfigDesc=(Template="w2_r0500_e5",World=(Dimensions=(X=10000,Y=10000),ChunkEdgeLengthMeters=50,SnapshotWritePeriodSeconds=0,LegacyFlags=(("bridge_qos_max_timeout", "0"),("bridge_soft_handover_enabled", "false"),("bridge_single_port_max_heartbeat_timeout_ms", "3600000")),LegacyJavaParams=()),ServerWorkers=((WorkerTypeName="UnrealWorker"),(WorkerTypeName="NPCWorker",NumEditorInstances=0)))
-StandardRuntimeVersion=(bUseGDKPinnedRuntimeVersionForLocal=True,bUseGDKPinnedRuntimeVersionForCloud=True,LocalRuntimeVersion="",CloudRuntimeVersion="")
-bDeleteDynamicEntities=True
+bGenerateDefaultLaunchConfig=True
+StandardRuntimeVersion=(bUseGDKPinnedRuntimeVersionForLocal=False,bUseGDKPinnedRuntimeVersionForCloud=False,LocalRuntimeVersion="squid-09f99cd87f",CloudRuntimeVersion="squid-09f99cd87f")
+bShutdownRuntimeGracefullyOnPIEExit=False
+bUseGDKPinnedInspectorVersion=True
+InspectorVersionOverride=
+SpatialOSLaunchConfig=(FilePath="")
+ExposedRuntimeIP=
+bAutoStartLocalDeployment=True
+bSpatialDebuggerEditorEnabled=False
+bEnableSessionLogRecording=False
 AutoStopLocalDeployment=OnEndPIE
+bDeleteDynamicEntities=True
+bStopPIEOnTestingCompleted=True
+SpatialOSSnapshotToSave=default.snapshot
+SpatialOSSnapshotToLoad=default.snapshot
+CookAndGeneratePlatform=
+CookAndGenerateAdditionalArguments=-cookall -unversioned
+AssemblyName=
+PrimaryDeploymentName=
+PrimaryLaunchConfigPath=(FilePath="")
+SnapshotPath=(FilePath="C:/Unreal/TestGyms/spatial/snapshots/default.snapshot")
+PrimaryDeploymentRegionCode=US
+MainDeploymentCluster=
+DeploymentTags=
+bIsAutoGenerateCloudConfigEnabled=True
+bBuildAndUploadAssembly=True
+AssemblyBuildConfiguration=Development
+bForceAssemblyOverwrite=False
+bBuildClientWorker=False
+bGenerateSchema=False
+bGenerateSnapshot=False
+BuildServerExtraArgs=
+BuildClientExtraArgs=
+BuildSimulatedPlayerExtraArgs=
+DevelopmentAuthenticationToken=
+bConnectServerToCloud=False
+ListeningAddress=127.0.0.1
+SimulatedPlayerDeploymentRegionCode=US
+SimulatedPlayerCluster=
+bSimulatedPlayersIsEnabled=False
+SimulatedPlayerDeploymentName=
+NumberOfSimulatedPlayers=0
+bMobileOverrideConnectionFlow=False
+MobileConnectionFlow=LocalDeployment
+MobileRuntimeIPOverride=
+MobileWorkerType=UnrealClient
+MobileExtraCommandLineArgs=
+bPackageMobileCommandLineArgs=True
+bStartPIEClientsWithLocalLaunchOnDevice=False
+LaunchConfigDesc=(bUseDefaultTemplateForRuntimeVariant=True,Template="w2_r0500_e5",RuntimeFlags=(),ServerWorkerConfiguration=(WorkerTypeName="UnrealWorker",Flags=(("total_players", "8"),("player_density", "2")),WorkerPermissions=(bAllowEntityCreation=True,bAllowEntityDeletion=True,bDisconnectWorker=True,bReserveEntityID=True,bAllowEntityQuery=True,bDisableEntityQueryRestrictedComponents=False,bAllowSystemEntityCommand=True),bAutoNumEditorInstances=True,NumEditorInstances=0,bManualWorkerConnectionOnly=False),AdditionalWorkerConfigs=,World=(Dimensions=(X=10000,Y=10000)),MaxConcurrentWorkers=1000)
+SpatialOSNetFlowType=LocalDeployment
 
