--- a/Game/Config/NFROverrides/DefaultSpatialGDKSettings.diff.ini
+++ b/Game/Config/NFROverrides/DefaultSpatialGDKSettings.diff.ini
@@ -3,4 +3,10 @@ bEnableNetCullDistanceFrequency=True
 SpatialDebugger=None
 bEnableMetricsDisplay=False
 PositionUpdateLowerThresholdSeconds=2.0
-PositionUpdateLowerThresholdCentimeters=3000.0
+PositionUpdateLowerThresholdCentimeters=15000.0
+PositionUpdateThresholdMaxCentimeters=20000.0
+PositionUpdateThresholdMaxSeconds=300.0
+ClientDownstreamWindowSizeBytes=4194304
+ClientUpstreamWindowSizeBytes=4194304
+ServerDownstreamWindowSizeBytes=4194304
+ServerUpstreamWindowSizeBytes=4194304
