Enabled strategy worker by default

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -54,4 +54,5 @@ bUseSecureClientConnection=False
 bUseSecureServerConnection=False
 bEnableClientQueriesOnServer=False
 EventTracingSamplingSettingsClass=BlueprintGeneratedClass'/Game/EventTracing/BP_ETSamplingSettings_Default.BP_ETSamplingSettings_Default_C'
+bRunStrategyWorker=True
 
