Update defaults to not run strategy worker except in disco scenario

--- a/Game/Config/DefaultSpatialGDKEditorSettings.ini
+++ b/Game/Config/DefaultSpatialGDKEditorSettings.ini
@@ -2,7 +2,7 @@
 
 [/Script/SpatialGDKEditor.SpatialGDKEditorSettings]
 bGenerateDefaultLaunchConfig=True
-StandardRuntimeVersion=(bUseGDKPinnedRuntimeVersionForLocal=False,bUseGDKPinnedRuntimeVersionForCloud=False,LocalRuntimeVersion="squid-09f99cd87f",CloudRuntimeVersion="squid-09f99cd87f")
+StandardRuntimeVersion=(bUseGDKPinnedRuntimeVersionForLocal=True,bUseGDKPinnedRuntimeVersionForCloud=True,LocalRuntimeVersion="",CloudRuntimeVersion="")
 bShutdownRuntimeGracefullyOnPIEExit=False
 bUseGDKPinnedInspectorVersion=True
 InspectorVersionOverride=
