--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -53,5 +53,5 @@ bUseSecureServerConnection=False
 bEnableClientQueriesOnServer=False
 EventTracingSamplingSettingsClass=BlueprintGeneratedClass'/Game/EventTracing/BP_ETSamplingSettings_Default.BP_ETSamplingSettings_Default_C'
 bEnableMultiWorker=True
-bRunStrategyWorker=True
+bRunStrategyWorker=False
 
