Resign to requiring strategy worker set in config for disco scenario

--- a/Game/Config/NFROverrides/DefaultSpatialGDKSettings.diff.ini
+++ b/Game/Config/NFROverrides/DefaultSpatialGDKSettings.diff.ini
@@ -10,3 +10,7 @@ ClientDownstreamWindowSizeBytes=4194304
 ClientUpstreamWindowSizeBytes=4194304
 ServerDownstreamWindowSizeBytes=4194304
 ServerUpstreamWindowSizeBytes=4194304
+bRunStrategyWorker=True
+bUseClientEntityInterestQueries=True
+bUseNarrowPhaseNCDInterestCulling=True
+bUserSpaceServerInterest=True
