Feature/enable entity id interest (#477)
* Improvements to UX component

* Latency missing includes

* Added toggle to replicate less data within ReplicatedComponent_BP

* Add disco game state that includes counter object, update to disco scenario specific configs

* Increase frequency of client auth movement rpcs

* Fix sim clients not moving when waypoints too close together

* Update config defaults, including default enabling strategy worker

* Add cube spawning config options

* Allow UX reporting to work in zoning scenarios with multiple workers

* Allow long NFR test timers, enabled for Disco test

* Enable client interest in TestGymRepGraph, and nearest n actor nodes

* Update defaults to not run strategy worker except in disco scenario

--- a/Game/Config/DefaultSpatialGDKSettings.ini
+++ b/Game/Config/DefaultSpatialGDKSettings.ini
@@ -14,8 +14,6 @@ bEnableHandover=True
 MaxNetCullDistanceSquared=0.000000
 QueuedIncomingRPCWaitTime=1.000000
 QueuedOutgoingRPCWaitTime=30.000000
-PositionUpdateFrequency=1.000000
-PositionDistanceThreshold=100.000000
 bEnableMetrics=True
 bEnableMetricsDisplay=False
 MetricsReportRate=2.000000
@@ -54,4 +52,6 @@ bUseSecureClientConnection=False
 bUseSecureServerConnection=False
 bEnableClientQueriesOnServer=False
 EventTracingSamplingSettingsClass=BlueprintGeneratedClass'/Game/EventTracing/BP_ETSamplingSettings_Default.BP_ETSamplingSettings_Default_C'
+bEnableMultiWorker=True
+bRunStrategyWorker=False
 
