WIP: Adding lightweight actor rep lists

--- a/Game/Config/DefaultEngine.ini
+++ b/Game/Config/DefaultEngine.ini
@@ -37,7 +37,7 @@ bAllowClientSideNavigation=True
 
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 ; Uncomment this to enable the replication graph
-;ReplicationDriverClassName=/Script/GDKTestGyms.TestGymsReplicationGraph
+ReplicationDriverClassName=/Script/GDKTestGyms.TestGymsReplicationGraph
 NetServerMaxTickRate=30
 
 [/Script/OnlineSubsystemUtils.IpNetDriver]
