--- a/Game/Config/DefaultSpatialGDKEditorSettings.ini
+++ b/Game/Config/DefaultSpatialGDKEditorSettings.ini
@@ -2,7 +2,7 @@
 
 [/Script/SpatialGDKEditor.SpatialGDKEditorSettings]
 bGenerateDefaultLaunchConfig=True
-StandardRuntimeVersion=(bUseGDKPinnedRuntimeVersionForLocal=True,bUseGDKPinnedRuntimeVersionForCloud=True,LocalRuntimeVersion="",CloudRuntimeVersion="")
+StandardRuntimeVersion=(bUseGDKPinnedRuntimeVersionForLocal=False,bUseGDKPinnedRuntimeVersionForCloud=True,LocalRuntimeVersion="squid-6392e25e75",CloudRuntimeVersion="")
 bShutdownRuntimeGracefullyOnPIEExit=False
 bUseGDKPinnedInspectorVersion=True
 InspectorVersionOverride=
